[package]
name = "beacon"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.18", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1.114.0"
env_logger = "0.11.10"
log = "0.4.32"
reqwest = "0.13.4"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
